# wbr-cli

./: Cargo.toml  LICENSE  README.md
src/: api.rs  auth.rs  main.rs  save.rs
